app/assets/stylesheets/products.css
body {
  font-family: Helvetica, sans-serif;
  text-align: center; 
  font-size: 18pt;
  font-weight: 200;
  font-style: normal;
  background-image: url(http://i.ytimg.com/vi/fVsONlc3OUY/maxresdefault.jpg);
  background-color: #cccccc;
  background-repeat: no-repeat;
  background-size: cover;
  color: #980000; 
}
body #main {
  background-color: #e0e0e0;
  opacity: 1;
  color: #980000;
  width: 90%;
  left: 5%;
  position: relative;
  padding: 10px;
  border: 5px solid #CC3300;
  border-radius: 10px;
}
body h4{
  font-family: Helvetica, sans-serif;
  text-align: center; 
  font-size: 28pt;
  font-weight: 500;
  font-style: normal;
  background-color: transparent;
  color: white;
  text-shadow: black;
}
body h3 {
  font-family: Helvetica, sans-serif;
  font-size: 20pt;
  font-weight: 200;
  font-style: normal;
  text-align: center; 
  opacity: 1.0;
  background-color: transparent;
}
body h2 {
  font-family: Helvetica, sans-serif;
  font-size: 15pt;
  font-weight: 200;
  font-style: normal;
  text-align: center;
  background-color: #CC6600;
}
body h1 {
  font-family: Helvetica, sans-serif;
  font-size: 12pt;
  font-weight: 200;
  font-style: normal;
  text-align: left;
  background-color: transparent;
}
body .newly_listed {
  position: relative;
  top: -33px;
  width: 20%;
  left: 0%;
  background-color: #ffcc33;
  color: #980000;
  padding: 10px;
  margin-bottom: 20px;
  text-align: left;
  font-family: Helvetica, sans-serif;
  font-size: 13pt;
  font-weight: 200;
  font-style: normal; 
  border: 5px solid #980000;
  border-radius: 10px;
}
body .ending_soon {
  position: absolute; 
  top: 90px;
  width: 20%;
  left: 35%;
  opacity: 1.0;
  background-color: #ffcc33;
  color: #980000;
  padding: 10px;
  margin-bottom: 20px;
  text-align: left;
  font-family: Helvetica, sans-serif;
  font-size: 13pt;
  font-weight: 200;
  font-style: normal; 
  border: 5px solid #980000;
  border-radius: 10px;
}
body .close_to_target {
  position: absolute;
  top: 90px;
  width: 20%;
  left: 70%;
  background-color: #ffcc33;
  color: #980000;
  padding: 10px;
  margin-bottom: 20px;
  text-align: left;
  font-family: Helvetica, sans-serif;
  font-size: 13pt;
  font-weight: 200;
  font-style: normal; 
  border: 5px solid #980000;
  border-radius: 10px;
}
body .products_table caption {
  font-family: Helvetica, sans-serif;
  font-size: 20pt;
  font-weight: 200;
  font-style: normal; 
}
body th {
  font-weight: bold; 
}
body a:link, body a:visited, body .products_table th {
  color: #336600;
  background-color: transparent; 
}
body .price {
    text-align: right; 
}
body .back_link:link {
  color: #980000;
  text-align: right;
  font-family: Helvetica, sans-serif;
  font-size: 13pt;
}
body .product_form {
  color: #980000;
  text-align: left;
  font-family: Helvetica, sans-serif;
  font-size: 12pt;
}
body .centered_table {
  width: 70%;
  margin-left: 15%;
  margin-right: 15%;
}

